--- a/dev-dotnet/msbuild-roslyn-csc/files/mono-MSBuildTask.csproj
+++ b/dev-dotnet/msbuild-roslyn-csc/files/mono-MSBuildTask.csproj
@@ -11,7 +11,7 @@
     <ProjectGuid>{7AD4FE65-9A30-41A6-8004-AA8F89BCB7F3}</ProjectGuid>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <OutputPath>bin\$(Configuration)\$(MSBuildToolsVersion)</OutputPath>
+    <OutputPath>bin\$(Configuration)\$(TargetVersion)</OutputPath>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
