--- a/dev-dotnet/msbuild-roslyn-csc/files/mono-MSBuildTask.csproj
+++ b/dev-dotnet/msbuild-roslyn-csc/files/mono-MSBuildTask.csproj
@@ -113,7 +113,7 @@
     <Reference Include="System.Threading" />
     <Reference Include="System.Threading.Tasks" />
     <Reference Include="Microsoft.Build.Framework, Version=$(ReferencesVersion), Culture=neutral, PublicKeyToken=$(PublicKeyToken)" />
-    <Reference Include="Microsoft.Build.Utilities, Version=$(ReferencesVersion), Culture=neutral, PublicKeyToken=$(PublicKeyToken)" />
+    <Reference Include="Microsoft.Build.Utilities.Core, Version=$(ReferencesVersion), Culture=neutral, PublicKeyToken=$(PublicKeyToken)" />
     <Reference Include="Microsoft.Build.Tasks.Core, Version=$(ReferencesVersion), Culture=neutral, PublicKeyToken=$(PublicKeyToken)" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
