--- a/dev-dotnet/msbuild-defaulttasks/files/15.4/xbuild-Microsoft.Build.Tasks.csproj
+++ b/dev-dotnet/msbuild-defaulttasks/files/15.4/xbuild-Microsoft.Build.Tasks.csproj
@@ -746,7 +746,7 @@
     <Reference Include="System.Reflection.Metadata" />
     <Reference Include="System.Collections.Immutable" />
     <Reference Include="Microsoft.Build.Framework, Version=$(VersionNumber), Culture=neutral, PublicKeyToken=$(PublicKeyToken)" />
-    <Reference Include="Microsoft.Build.Utilities, Version=$(VersionNumber), Culture=neutral, PublicKeyToken=$(PublicKeyToken)" />
+    <Reference Include="Microsoft.Build.Utilities.Core, Version=$(VersionNumber), Culture=neutral, PublicKeyToken=$(PublicKeyToken)" />
     <Reference Include="Microsoft.Build.Tasks.CodeAnalysis">
       <HintPath>$(CompilerToolsDir)\Microsoft.Build.Tasks.CodeAnalysis.dll</HintPath>
     </Reference>
