--- a/dev-dotnet/msbuild-tasks-api/files/15.4.8.0/mono-Microsoft.Build.Utilities.Core.csproj
+++ b/dev-dotnet/msbuild-tasks-api/files/15.4.8.0/mono-Microsoft.Build.Utilities.Core.csproj
@@ -4,8 +4,8 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <OutputType>Library</OutputType>
-    <AssemblyName>Microsoft.Build.Utilities</AssemblyName>
-    <VersionNumber Condition=" '$(VersionNumber)' == '' ">15.9.0.0</VersionNumber>
+    <AssemblyName>Microsoft.Build.Utilities.Core</AssemblyName>
+    <VersionNumber Condition=" '$(VersionNumber)' == '' ">15.4.0.0</VersionNumber>
     <RootNamespace>Microsoft.Build.Utilities</RootNamespace>
     <ProjectGuid>{6583A0E6-E22F-4308-9D5C-F5E6D7D529B9}</ProjectGuid>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
@@ -125,6 +125,7 @@
   </PropertyGroup>
   <!-- Source Files -->
   <ItemGroup>
+    <Compile Include="AssemblyInfo.cs" />
     <Compile Include="AV.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -132,13 +133,11 @@
       <Link>Compat\SafeHandleZeroOrMinusOneIsInvalid.cs</Link>
     </Compile>
     <!-- Source Files -->
-    <Compile Include="..\Shared\FileSystem\*.cs" />
-    <Compile Include="..\Shared\ReuseableStringBuilder.cs" />
     <Compile Include="..\Shared\AssemblyFolders\AssemblyFoldersEx.cs" />
     <Compile Include="..\Shared\AssemblyFolders\AssemblyFoldersFromConfig.cs" />
     <Compile Include="..\Shared\AssemblyFolders\Serialization\AssemblyFolderCollection.cs" />
     <Compile Include="..\Shared\AssemblyFolders\Serialization\AssemblyFolderItem.cs" />
-    <Compile Include="..\Shared\IConstrainedEqualityComparer.cs" />
+    <Compile Include="..\Shared\FileUtilities.GetFolderPath.cs" />
     <Compile Include="..\Shared\BuildEnvironmentHelper.cs" />
     <Compile Include="..\Shared\FxCopExclusions\Microsoft.Build.Shared.Suppressions.cs" />
     <Compile Include="..\Shared\CanonicalError.cs" />
@@ -167,6 +166,7 @@
     <Compile Include="..\Shared\OpportunisticIntern.cs" />
     <Compile Include="..\Shared\ReadOnlyEmptyCollection.cs" />
     <Compile Include="..\Shared\ReadOnlyEmptyDictionary.cs" />
+    <Compile Include="..\Shared\ReadOnlyEmptyList.cs" />
     <Compile Include="..\Shared\RegistryDelegates.cs" />
     <Compile Include="..\Shared\RegistryHelper.cs" />
     <Compile Include="..\Shared\ResourceUtilities.cs" />
@@ -178,8 +178,35 @@
     <Compile Include="..\Shared\ToolsetElement.cs" />
     <Compile Include="..\Shared\VisualStudioLocationHelper.cs" />
     <Compile Include="..\Shared\Traits.cs" />
+    <Compile Include="ApiContract.cs" />
+    <Compile Include="AppDomainIsolatedTask.cs" />
+    <Compile Include="AssemblyFolders\AssemblyFoldersExInfo.cs" />
+    <Compile Include="AssemblyFolders\AssemblyFoldersFromConfigInfo.cs" />
+    <Compile Include="AssemblyResources.cs" />
+    <Compile Include="CommandLineBuilder.cs" />
+    <Compile Include="FxCopExclusions\Microsoft.Build.Utilities.Suppressions.cs" />
+    <Compile Include="Logger.cs" />
+    <Compile Include="MuxLogger.cs" />
+    <Compile Include="ProcessorArchitecture.cs" />
+    <Compile Include="SDKType.cs" />
+    <Compile Include="TargetPlatformSDK.cs" />
+    <Compile Include="ExtensionSDK.cs" />
+    <Compile Include="SDKManifest.cs" />
+    <Compile Include="PlatformManifest.cs" />
+    <Compile Include="Task.cs" />
+    <Compile Include="TaskItem.cs" />
+    <Compile Include="ToolLocationHelper.cs" />
+    <Compile Include="ToolTask.cs" />
+    <Compile Include="ProcessExtensions.cs" />
+    <!-- FileTracker Managed Libraries -->
+    <Compile Include="TrackedDependencies\CanonicalTrackedInputFiles.cs" />
+    <Compile Include="TrackedDependencies\DependencyTableCache.cs" />
+    <Compile Include="TrackedDependencies\FlatTrackingData.cs" />
+    <Compile Include="TrackedDependencies\FileTracker.cs" />
+    <Compile Include="TrackedDependencies\CanonicalTrackedOutputFiles.cs" />
+    <Compile Include="TrackedDependencies\TrackedDependencies.cs" />
+    <Compile Include="TrackedDependencies\CanonicalTrackedFilesHelper.cs" />
     <Compile Include="..\Shared\EnvironmentUtilities.cs" />
-    <Compile Include="**\*.cs" />
     <!-- Win32 RC Files -->
     <RCResourceFile Include="native.rc" />
     <!-- Resource Files -->
@@ -201,9 +228,8 @@
     <Reference Include="System" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Configuration" />
-    <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.Collections.Immutable" />
     <Reference Include="System.Runtime.InteropServices.RuntimeInformation" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="Microsoft.Build.Framework, Version=$(VersionNumber), Culture=neutral, PublicKeyToken=$(PublicKeyToken)" >
       <HintPath>../Framework/bin/$(Configuration)/Microsoft.Build.Framework.dll</HintPath>
     </Reference>
