--- a/dev-dotnet/msbuild-tasks-api/files/15.9.20.62856/mono-Microsoft.Build.Utilities.Core.csproj
+++ b/dev-dotnet/msbuild-tasks-api/files/15.9.20.62856/mono-Microsoft.Build.Utilities.Core.csproj
@@ -4,8 +4,8 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <OutputType>Library</OutputType>
-    <AssemblyName>Microsoft.Build.Utilities</AssemblyName>
-    <VersionNumber Condition=" '$(VersionNumber)' == '' ">15.7.0.0</VersionNumber>
+    <AssemblyName>Microsoft.Build.Utilities.Core</AssemblyName>
+    <VersionNumber Condition=" '$(VersionNumber)' == '' ">15.9.0.0</VersionNumber>
     <RootNamespace>Microsoft.Build.Utilities</RootNamespace>
     <ProjectGuid>{6583A0E6-E22F-4308-9D5C-F5E6D7D529B9}</ProjectGuid>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
@@ -132,11 +132,12 @@
       <Link>Compat\SafeHandleZeroOrMinusOneIsInvalid.cs</Link>
     </Compile>
     <!-- Source Files -->
+    <Compile Include="..\Shared\FileSystem\*.cs" />
+    <Compile Include="..\Shared\ReuseableStringBuilder.cs" />
     <Compile Include="..\Shared\AssemblyFolders\AssemblyFoldersEx.cs" />
     <Compile Include="..\Shared\AssemblyFolders\AssemblyFoldersFromConfig.cs" />
     <Compile Include="..\Shared\AssemblyFolders\Serialization\AssemblyFolderCollection.cs" />
     <Compile Include="..\Shared\AssemblyFolders\Serialization\AssemblyFolderItem.cs" />
-    <Compile Include="..\Shared\FileUtilities.GetFolderPath.cs" />
     <Compile Include="..\Shared\IConstrainedEqualityComparer.cs" />
     <Compile Include="..\Shared\BuildEnvironmentHelper.cs" />
     <Compile Include="..\Shared\FxCopExclusions\Microsoft.Build.Shared.Suppressions.cs" />
