--- a/dev-dotnet/msbuild-tasks-api/files/15.9.20.62856/mono-Microsoft.Build.Utilities.Core.csproj
+++ b/dev-dotnet/msbuild-tasks-api/files/15.9.20.62856/mono-Microsoft.Build.Utilities.Core.csproj
@@ -209,6 +209,24 @@
     </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <Target Name="BeforeBuild">
+    <PropertyGroup Condition=" '$(VersionNumber)' == '' ">
+      <VersionNumber>1.0.0.0</VersionNumber>
+    </PropertyGroup>
+    <ItemGroup>
+      <AssemblyAttributes Include="AssemblyVersion">
+        <_Parameter1>$(VersionNumber)</_Parameter1>
+      </AssemblyAttributes>
+      <AssemblyAttributes Include="AssemblyFileVersion">
+        <_Parameter1>$(VersionNumber)</_Parameter1>
+      </AssemblyAttributes>
+      <AssemblyAttributes Include="AssemblyInformationalVersion">
+        <_Parameter1>$(VersionNumber)</_Parameter1>
+      </AssemblyAttributes>   
+      </ItemGroup>
+    <WriteCodeFragment Language="C#" OutputFile="AV.cs" AssemblyAttributes="@(AssemblyAttributes)" />
+  </Target>
+<!--
   <Import Project="$(MSBuildExtensionsPath)\MSBuildCommunityTasks\MSBuild.Community.Tasks.Targets" />
   <Target Name="BeforeBuild">
     <AssemblyInfo CodeLanguage="C#"
@@ -217,4 +235,5 @@
       AssemblyFileVersion="$(VersionNumber)"
     />
   </Target>
+-->
 </Project>
