--- a/dev-util/msbuild/files/15.9.20.62856/MSBuild.exe.config
+++ b/dev-util/msbuild/files/15.9.20.62856/MSBuild.exe.config
@@ -6,12 +6,14 @@
     <msbuildToolsets default="Current">
       <toolset toolsVersion="Current">
         <property name="MSBuildToolsPath" value="$([MSBuild]::GetCurrentToolsDirectory())" />
-        <property name="RoslynTargetsPath" value="$([MSBuild]::GetToolsDirectory32())\..\Roslyn" />
+        <property name="MSBuildExtensionsPath" value="/usr/share/msbuild" />
+        <property name="RoslynTargetsPath" value="$(MSBuildExtensionsPath)/Roslyn" />
         <property name="CscToolPath" value="/usr/lib/mono/4.5" />
       </toolset>
       <toolset toolsVersion="15.0">
         <property name="MSBuildToolsPath" value="$([MSBuild]::GetCurrentToolsDirectory())" />
-        <property name="RoslynTargetsPath" value="$([MSBuild]::GetToolsDirectory32())\..\Roslyn" />
+        <property name="MSBuildExtensionsPath" value="/usr/share/msbuild" />
+        <property name="RoslynTargetsPath" value="$(MSBuildExtensionsPath)/Roslyn" />
         <property name="CscToolPath" value="/usr/lib/mono/4.5" />
       </toolset>
     </msbuildToolsets>
