add path to sdks into msbuild config

--- a/dev-util/msbuild/files/15.9.20.62856/MSBuild.exe.config
+++ b/dev-util/msbuild/files/15.9.20.62856/MSBuild.exe.config
@@ -9,12 +9,14 @@
         <property name="MSBuildExtensionsPath" value="/usr/share/msbuild" />
         <property name="RoslynTargetsPath" value="$(MSBuildExtensionsPath)/Roslyn" />
         <property name="CscToolPath" value="/usr/lib/mono/4.5" />
+        <property name="MSBuildSDKsPath" value="$(MSBuildExtensionsPath)\Sdks" /> 
       </toolset>
       <toolset toolsVersion="15.0">
         <property name="MSBuildToolsPath" value="$([MSBuild]::GetCurrentToolsDirectory())" />
         <property name="MSBuildExtensionsPath" value="/usr/share/msbuild" />
         <property name="RoslynTargetsPath" value="$(MSBuildExtensionsPath)/Roslyn" />
         <property name="CscToolPath" value="/usr/lib/mono/4.5" />
+        <property name="MSBuildSDKsPath" value="$(MSBuildExtensionsPath)\Sdks" /> 
       </toolset>
     </msbuildToolsets>
 </configuration>
