--- a/dev-dotnet/system-collections-immutable/files/mono-System.Collections.Immutable-r1.csproj
+++ b/dev-dotnet/system-collections-immutable/files/mono-System.Collections.Immutable-r1.csproj
@@ -105,17 +105,11 @@
     <Compile Include="Validation\Requires.cs" />
     <Compile Include="Validation\ValidatedNotNullAttribute.cs" />
     <Compile Include="AV.cs" />
+    <Compile Include="SR.cs" />
+    <Compile Include="$(CommonPath)/System/SR.cs" />
     <Compile Include="$(CommonPath)/System/Runtime/Versioning/NonVersionableAttribute.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(MSBuildExtensionsPath)\MSBuild.Community.Tasks.Targets" />
-  <Import Project="$(MSBuildExtensionsPath)\resources.targets" />
-  <Target Name="BeforeBuild">
-    <PropertyGroup Condition=" '$(VersionNumber)' == '' ">
-      <VersionNumber>2.0.0.0</VersionNumber>
-    </PropertyGroup>
-    <AssemblyInfo CodeLanguage="C#" OutputFile="AV.cs" AssemblyVersion="$(VersionNumber)" AssemblyFileVersion="$(VersionNumber)" />
-  </Target>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
