minor changes to make msbuild installable

--- a/dev-dotnet/buildtools/files/mono-Microsoft.DotNet.Build.Tasks.csproj
+++ b/dev-dotnet/buildtools/files/mono-Microsoft.DotNet.Build.Tasks.csproj
@@ -109,7 +109,7 @@
     <Reference Include="System.IO.Compression.FileSystem" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(MSBuildExtensionsPath)\MSBuild.Community.Tasks.Targets" />
+  <Import Project="$(MSBuildExtensionsPath)/MSBuildCommunityTasks/MSBuild.Community.Tasks.Targets" />
   <Target Name="BeforeBuild">
     <PropertyGroup Condition=" '$(VersionNumber)' == '' ">
        <VersionNumber>1.0.27.0</VersionNumber>
