--- a/dev-dotnet/system-reflection-metadata/files/mono-System.Reflection.Metadata.csproj
+++ b/dev-dotnet/system-reflection-metadata/files/mono-System.Reflection.Metadata.csproj
@@ -251,8 +251,8 @@
     <Compile Include="AV.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(MSBuildExtensionsPath)\MSBuild.Community.Tasks.Targets" />
   <Import Project="$(MSBuildExtensionsPath)\resources.targets" />
+  <Import Project="$(MSBuildExtensionsPath)/MSBuildCommunityTasks/MSBuild.Community.Tasks.Targets" />
   <Target Name="BeforeBuild">
     <PropertyGroup Condition=" '$(VersionNumber)' == '' ">
       <VersionNumber>2.0.0.0</VersionNumber>
