--- a/dev-util/msbuild/files/15.9.20.62856/mono-Microsoft.Build.csproj
+++ b/dev-util/msbuild/files/15.9.20.62856/mono-Microsoft.Build.csproj
@@ -166,7 +166,7 @@
     <Reference Include="System.Configuration" />
     <Reference Include="Microsoft.Build.Framework, Version=15.9.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
     <Reference Include="System.Threading.Tasks.Dataflow" />
-    <Reference Include="System.Collections.Immutable, Version=2.0.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756" />
+    <Reference Include="System.Collections.Immutable" />
     <Reference Include="System.IO.Compression" />
     <Reference Include="System.Runtime" />
     <Reference Include="System.Runtime.Serialization" />
